<resources>
    <string name="app_name">Hello World</string>
    <string name="hi">Hiiiii</string>
    <string name="result" translatable="false">0</string>
    <string name="value_1" translatable="false">1</string>
    <string name="value_2" translatable="false">2</string>
    <string name="value_3" translatable="false">3</string>
    <string name="value_4" translatable="false">4</string>
    <string name="value_5" translatable="false">5</string>
    <string name="value_6" translatable="false">6</string>
    <string name="value_7" translatable="false">7</string>
    <string name="value_8" translatable="false">8</string>
    <string name="value_9" translatable="false">9</string>
    <string name="calculator_button" translatable="false">Calculator</string>
    <string name="value_0" translatable="false">0</string>
    <string name="point" translatable="false">.</string>
    <string name="ac" translatable="false">AC</string>
    <string name="equal" translatable="false">=</string>
    <string name="percentage" translatable="false">%</string>
    <string name="squareroot" translatable="false">√</string>
    <string name="division" translatable="false">/</string>
    <string name="multiplication" translatable="false">*</string>
    <string name="subtraction" translatable="false">-</string>
    <string name="addition" translatable="false">+</string>
    <string name="activity_for_result_button" translatable="false">Activity for result</string>
    <string name="implicit_intent_button">Implicit Intent</string>
    <string name="make_phone_call_button">Make Phone Call</string>
</resources>
