<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalculatorActivity">

    <TextView
        android:id="@+id/tvScreen"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/colorAccent"
        android:text="@string/result"
        android:textAlignment="viewEnd"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/btnAC"
        app:layout_constraintEnd_toEndOf="@id/btn_point"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--region Row 1 - Special Buttons-->
    <Button
        android:id="@+id/btnAC"
        style="@style/ButtonOperatorsDesign"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/ac"
        app:layout_constraintBottom_toTopOf="@id/btn7"
        app:layout_constraintEnd_toStartOf="@id/btnplusmin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvScreen" />

    <Button
        android:id="@+id/btnplusmin"
        style="@style/ButtonOperatorsDesign"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/plusmin"
        app:layout_constraintBottom_toTopOf="@id/btn8"
        app:layout_constraintEnd_toStartOf="@id/btnpercent"
        app:layout_constraintStart_toEndOf="@id/btnAC"
        app:layout_constraintTop_toBottomOf="@id/tvScreen" />

    <Button
        android:id="@+id/btnpercent"
        style="@style/ButtonOperatorsDesign"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/percentage"
        android:onClick="onOperationButtonClicked"
        app:layout_constraintBottom_toTopOf="@id/btn9"
        app:layout_constraintEnd_toEndOf="@id/btnsqroot"
        app:layout_constraintStart_toEndOf="@id/btnplusmin"
        app:layout_constraintTop_toBottomOf="@id/tvScreen" />

    <Button
        android:id="@+id/btnsqroot"
        style="@style/ButtonOperatorsDesign"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/squareroot"
        android:onClick="onOperationButtonClicked"
        app:layout_constraintBottom_toTopOf="@id/btndivision"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnpercent"
        app:layout_constraintTop_toBottomOf="@id/tvScreen" />
    <!--endregion-->

    <!--region 7, 8, 9, /-->
    <Button
        android:id="@+id/btn7"
        style="@style/ButtonDesign"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="onNumberButtonClicked"
        android:text="@string/value_7"
        app:layout_constraintBottom_toTopOf="@id/btn4"
        app:layout_constraintEnd_toStartOf="@id/btn8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnAC" />

    <Button
        android:id="@+id/btn8"
        style="@style/ButtonDesign"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="onNumberButtonClicked"
        android:text="@string/value_8"
        app:layout_constraintBottom_toTopOf="@id/btn5"
        app:layout_constraintEnd_toStartOf="@id/btn9"
        app:layout_constraintStart_toEndOf="@id/btn7"
        app:layout_constraintTop_toBottomOf="@id/btnplusmin" />

    <Button
        android:id="@+id/btn9"
        style="@style/ButtonDesign"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="onNumberButtonClicked"
        android:text="@string/value_9"
        app:layout_constraintBottom_toTopOf="@id/btn6"
        app:layout_constraintEnd_toEndOf="@id/btndivision"
        app:layout_constraintStart_toEndOf="@id/btn8"
        app:layout_constraintTop_toBottomOf="@id/btnpercent" />

    <Button
        android:id="@+id/btndivision"
        style="@style/ButtonOperatorsDesign"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/division"
        android:onClick="onOperationButtonClicked"
        app:layout_constraintBottom_toTopOf="@id/btnmultiplication"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn9"
        app:layout_constraintTop_toBottomOf="@id/btnsqroot" />
    <!--endregion-->

    <!--region 4, 5, 6, *-->
    <Button
        android:id="@+id/btn4"
        style="@style/ButtonDesign"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="onNumberButtonClicked"
        android:text="@string/value_4"
        app:layout_constraintBottom_toTopOf="@id/btn1"
        app:layout_constraintEnd_toStartOf="@id/btn5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn7" />

    <Button
        android:id="@+id/btn5"
        style="@style/ButtonDesign"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="onNumberButtonClicked"
        android:text="@string/value_5"
        app:layout_constraintBottom_toTopOf="@id/btn2"
        app:layout_constraintEnd_toStartOf="@id/btn6"
        app:layout_constraintStart_toEndOf="@id/btn4"
        app:layout_constraintTop_toBottomOf="@id/btn8" />

    <Button
        android:id="@+id/btn6"
        style="@style/ButtonDesign"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="onNumberButtonClicked"
        android:text="@string/value_6"
        app:layout_constraintBottom_toTopOf="@id/btn3"
        app:layout_constraintEnd_toEndOf="@id/btnmultiplication"
        app:layout_constraintStart_toEndOf="@id/btn5"
        app:layout_constraintTop_toBottomOf="@id/btn9" />

    <Button
        android:id="@+id/btnmultiplication"
        style="@style/ButtonOperatorsDesign"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/multiplication"
        android:onClick="onOperationButtonClicked"
        app:layout_constraintBottom_toTopOf="@id/btnsubtraction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn6"
        app:layout_constraintTop_toBottomOf="@id/btndivision" />
    <!--endregion-->

    <!--region 1, 2, 3, - -->
    <Button
        android:id="@+id/btn1"
        style="@style/ButtonDesign"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="onNumberButtonClicked"
        android:text="@string/value_1"
        app:layout_constraintBottom_toTopOf="@id/btn0"
        app:layout_constraintEnd_toStartOf="@id/btn2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn4" />

    <Button
        android:id="@+id/btn2"
        style="@style/ButtonDesign"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="onNumberButtonClicked"
        android:text="@string/value_2"
        app:layout_constraintBottom_toTopOf="@id/btn0"
        app:layout_constraintEnd_toStartOf="@id/btn3"
        app:layout_constraintStart_toEndOf="@id/btn1"
        app:layout_constraintTop_toBottomOf="@id/btn5" />

    <Button
        android:id="@+id/btn3"
        style="@style/ButtonDesign"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="onNumberButtonClicked"
        android:text="@string/value_3"
        app:layout_constraintBottom_toTopOf="@id/btn_point"
        app:layout_constraintEnd_toEndOf="@id/btnsubtraction"
        app:layout_constraintStart_toEndOf="@id/btn2"
        app:layout_constraintTop_toBottomOf="@id/btn6" />

    <Button
        android:id="@+id/btnsubtraction"
        style="@style/ButtonOperatorsDesign"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/subtraction"
        android:onClick="onOperationButtonClicked"
        app:layout_constraintBottom_toTopOf="@id/btnaddition"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn3"
        app:layout_constraintTop_toBottomOf="@id/btnmultiplication" />
    <!--endregion-->

    <!--region 0, ., +-->
    <Button
        android:id="@+id/btn0"
        style="@style/ButtonDesign"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/value_0"
        android:onClick="onNumberButtonClicked"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/btn2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn2" />

    <Button
        android:id="@+id/btn_point"
        style="@style/ButtonDesign"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/point"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnaddition"
        app:layout_constraintStart_toEndOf="@id/btn0"
        app:layout_constraintTop_toBottomOf="@id/btn3" />

    <Button
        android:id="@+id/btnaddition"
        style="@style/ButtonOperatorsDesign"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/addition"
        android:onClick="onOperationButtonClicked"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_point"
        app:layout_constraintTop_toBottomOf="@id/btnsubtraction" />
    <!--endregion-->

</androidx.constraintlayout.widget.ConstraintLayout>