<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculator_button"
        android:onClick="calculatorButtonClick"/>


<!--    <ImageView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:src="@drawable/contactImage"-->
<!--        -->
<!--        android:contentDescription="image"/>-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hi"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_for_result_button"
        android:onClick="activityForResultButtonClick"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/implicit_intent_button"
        android:onClick="implicitIntentButtonClick"/>

    <Button
        android:id="@+id/btnMakePhoneCall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/make_phone_call_button"
        android:onClick="makePhoneCallButtonClick"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Parcelable Class"
        android:onClick="pacelableClick"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Show Person Details"
        android:onClick="showPersonDetailsClick"/>

</LinearLayout>